# c-data-structures

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  justfile
.github/workflows/: ci.yml
src/: CMakeLists.txt  doubly.c  singly.c
src/avl-tree/: CMakeLists.txt  avl.c  avl.h  node.c  node.h  test.c
src/binary-heap/: CMakeLists.txt  heap.c  heap.h  test.c
src/doubly-linked-list/: CMakeLists.txt  list.c  list.h  node.c  node.h  test.c
src/fenwick-tree/: CMakeLists.txt  fenwick.c  fenwick.h  test.c
src/queue/: CMakeLists.txt  queue.c  queue.h  test.c
src/singly-linked-list/: CMakeLists.txt  list.c  list.h  node.c  node.h  test.c
src/slice/: CMakeLists.txt  slice.c  slice.h  test.c
src/stack/: CMakeLists.txt  stack.c  stack.h  test.c
